--- a/WebContent/admin_style.css
+++ b/WebContent/admin_style.css
@@ -8,7 +8,7 @@ html,body
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
-    background-image: url("https://secure.sportsaffinity.com/1011/css/bluexp/background.jpg");
+    background-color:#fff;
     font-family: 'Raleway', sans-serif;
 }
 header{
@@ -167,7 +167,7 @@ footer .about h3,.helper h3,.policy h3{
   max-width: 380px;
   width: 100%;
   height: 430px;
-  background: #f0f3f0;
+  background: #f0f0f0;
   padding: 25px;
   border-radius: 5px;
   margin-top: 400px;
@@ -233,5 +233,13 @@ footer .about h3,.helper h3,.policy h3{
   text-align: center;
   font-size: 14px;
   transition: all 0.5s ease;
+}
+
+ #noline:hover{
+	color:blue;
+}
+
+#active{
+	text-decoration:none;
 }
  
